<resources>
    <string name="app_name">watchTogether</string>
    <string name="text1">Find your next movie together</string>
    <string name="question">How many people are watching?</string>
    <string name="numberOfPeople">Enter number...</string>
    <string name="text2">Everyone will swipe through the movies</string>
    <string name="continueBtn">Continue</string>
    <string name="addMovies">Add Movies</string>
    <string name="movieList">Which movies are up for swiping?</string>
    <string name="movieInput">Enter Movie title...</string>
    <string name="addBtn">+ Add Movie</string>
    <string name="startSwipeBtn">Start Swiping</string>
    <string name="noMoviesYet">No movies added yet</string>
</resources>