<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_3"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blue_2"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

        <TextView
            android:id="@+id/titleText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMovies"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

            <TextView
                android:id="@+id/subtitleText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movieList"
                android:textColor="#9CA3AF"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/titleText2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/inputCard"
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:cardBackgroundColor="@color/blue_1"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/subtitleText2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/movieTitleInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/movieInput"
                    android:textColorHint="#6b7280"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:inputType="text"
                    />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
